src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Home_Zipcode__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the Zipcode of the Contact&apos;s home address</description>
        <label>Home ZIP Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Identity_Verification_Date__c</fullName>
        <description>This field automatically populates. It indicates the most recent date and time the contact initiated identity verification.</description>
        <label>Identity Verification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Identity_Verification_Status__c</fullName>
        <description>This picklist field automatically populates. It indicates the identity verification status of the contact.</description>
        <label>Identity Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Communication Error</fullName>
                </value>
                <value>
                    <fullName>ID Verification Failure</fullName>
                </value>
                <value>
                    <fullName>Not Eligible for Questions</fullName>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Retry Limited Exceeded</fullName>
                </value>
                <value>
                    <fullName>Unable to Generate Questions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Languages__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the Language(s) of the contact&apos;s preference</description>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Level__c</fullName>
        <description>This field is not required and is manually populated. This field defines the priority level of a contact to its associated relationship.</description>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Marital_Status__c</fullName>
        <description>This field is optional. This field is manually populated. This field is used to set a contact&apos;s marital status.</description>
        <inlineHelpText>This field is used to set a contact&apos;s marital status.</inlineHelpText>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Unmarried</fullName>
                </value>
                <value>
                    <fullName>Legally Separated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__NetConnect_Pull_Date__c</fullName>
        <description>This field is currently not being used</description>
        <label>NetConnect Pull Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__OFAC_Check_Completion_Date__c</fullName>
        <description>The date in which the latest OFAC check was run for a given individual. This field is optional and can be edited via the customer creation workflow.</description>
        <label>OFAC Check Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Permanent_Resident_Entry_Date__c</fullName>
        <description>This field is optional. The user manually populates this field. It is the date of entry to the United States for a permanent resident.</description>
        <label>Permanent Residency Date of Entry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Permanent_Resident_Issue_Date__c</fullName>
        <description>This field is optional. The user manually populates this field. It is the issue date of permanent residency.</description>
        <label>Permanent Residency Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Permanent_Resident_Number__c</fullName>
        <description>This field is optional and manually updated. If the contact is a permanent resident this holds the resident number. A 13 digit alpha numeric text.</description>
        <label>Permanent Resident Number</label>
        <length>13</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Permanent_Resident__c</fullName>
        <description>This field is optional and manually updated. This is used to describe if the contact is a US Citizen</description>
        <label>Are you a permanent US Resident?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Phone_Number_Type__c</fullName>
        <description>This field is optional. The user manually populates this field. It describes the type of phone number.</description>
        <label>Phone Number Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Preferred_Contact_Method__c</fullName>
        <description>This field is optional. The user manually populates this field. It represents the customer&apos;s preferred contact method.</description>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually updated. This field is used as an indicator that the contact record is the primary contact for the relationship it is associated to.</description>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_ID_Expiration_Date__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the date the Primary ID ( ie Driver&apos;s License) will expire</description>
        <label>Primary ID Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_ID_Issue_Date__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the date the Primary ID (ie Driver&apos;s License) was issued</description>
        <label>Primary ID Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_ID_Issuing_State__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the State in which the Primary ID (ie Driver&apos;s License) was issued in.</description>
        <label>Primary ID Issuing State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Reg_O__c</fullName>
        <description>This field is optional. The user manually populates this field. When enabled, it indicates that an individual is an executive officer, director, or principal shareholder of that financial institution. When disabled, the invidual is not one of these. This field can be used in sharing settings for the org.</description>
        <label>Reg O</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Officer</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Family Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__SS_PE__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the social security number of the contact associated to the relationship/account. The field is only used when Platform Encryption is enabled.</description>
        <label>SS#</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__SS__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the social security number of the contact associated to the relationship/account. The field should not be used if Platform Encryption is enabled.</description>
        <label>SS#</label>
        <length>80</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Survey_Status__c</fullName>
        <description>This field is optional and manually updated. This field is currently not being used.</description>
        <inlineHelpText>110: Closing Survey Queued
801: Closing Survey Sent</inlineHelpText>
        <label>Survey Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the type of contact for this record. Typical pick list entries might include borrower, professional, referral source, or prospect. The value provided must match one of the values in the type pick list established for this organization.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Professional Contact</fullName>
                </value>
                <value>
                    <fullName>Referral Source</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__US_Citizen__c</fullName>
        <description>This field is optional and manually updated. This is used to describe if the contact is a US Citizen</description>
        <label>US Citizen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__W7_Exception_1a_Partner_EIN_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This defaults to false. The W-7 applicant&apos;s reason for applying for an ITIN is &apos;Exception 1a-Partnership Interest&apos; as described in the IRS instructions to form W-7 for Reason &apos;h.&apos;</description>
        <inlineHelpText>The W-7 applicant&apos;s reason for applying for an ITIN is &apos;Exception 1a-Partnership Interest&apos; as described in the IRS instructions to form W-7 for Reason &apos;h.&apos;</inlineHelpText>
        <label>W7 Exception 1a Partnership EIN Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__W7_Foreign_Military_ID_Card_Verifies__c</fullName>
        <description>This field is optional and manually updated. Foreign Military Identification Card verifies either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>Foreign Military Identification Card verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>W7 Foreign Military ID Card Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This field is optional. This field is used to specify the external ID / LookupKey for the contact record. ( A unique identifier )</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Broker_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Broker Contacts</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Dentist_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Dentist Contacts</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Pharmacy_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Pharmacy Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>LLC_BI__Business_Contact</fullName>
        <active>true</active>
        <description>Select &quot;Business Contact&quot; if you&apos;re adding a contact that applies to a Business relationship.</description>
        <label>Business Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Individual_Contact</fullName>
        <active>true</active>
        <description>Select &quot;Individual Contact&quot; if you&apos;re adding a contact that applies to an Individual relationship.</description>
        <label>Individual Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LLC_BI__Require_Country_of_Citizenship</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( LLC_BI__US_Citizen__c, &apos;no&apos;),
ISBLANK( TEXT( LLC_BI__Country_of_Citizenship__c ) ) )</errorConditionFormula>
        <errorMessage>If contact is not a US citizen a country of citizenship must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Social_Security_Max_Length</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( LLC_BI__SS__c ) &gt; 12</errorConditionFormula>
        <errorMessage>Social Security Number cannot exceed 12 characters</errorMessage>
    </validationRules>
</CustomObject>